--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fa" dir="rtl" class="w-dvw h-dvh">
+<html lang="fa" dir="rtl" class="w-dvw h-dvh overflow-y-scroll">
 
 <head>
   <meta charset="utf-8">
@@ -20,7 +20,7 @@
   <script src="/leaflet/leaflet.js"></script>
 </head>
 
-<body class="w-full h-full">
+<body class="w-full">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
